// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders homepage unchanged 1`] = `
<div>
  <homepage />
</div>
`;

exports[`renders profile page unchanged 1`] = `
<div>
  <profilepage />
</div>
`;
